chore(fmt): apply repository-wide formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "modificationsIfAvailable",
     "[clojure]": {
         "editor.defaultFormatter": "betterthantomorrow.calva"
     },
