ci: install Clojure CLI; fix clojure-lsp classpath via .lsp/config.edn

--- a/.github/workflows/format-check.yml
+++ b/.github/workflows/format-check.yml
@@ -1,13 +1,29 @@
-# .github/workflows/format-check.yml
 name: Format check
 on: [push, pull_request]
+
 jobs:
   cljfmt:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with: { distribution: 'temurin', java-version: '21' }
-      - run: brew install clojure-lsp/brew/clojure-lsp-native
-      - run: clojure-lsp clean-ns --dry
-      - run: clojure-lsp format --dry
+
+      - name: Setup Java (Temurin 21)
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '21'
+
+      - name: Add Homebrew to PATH
+        run: echo "$(brew --prefix)/bin" >> $GITHUB_PATH
+
+      - name: Install Clojure CLI & clojure-lsp
+        run: |
+          brew install clojure/tools/clojure
+          brew install clojure-lsp/brew/clojure-lsp-native
+          clojure -Sdescribe
+          clojure-lsp --version
+
+      - name: Format check (dry-run)
+        run: |
+          clojure-lsp clean-ns --dry
+          clojure-lsp format --dry
