ci: compile Java before tests; docs(handoff): fix core samples heredoc (stdout, close fence)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,11 @@ jobs:
           restore-keys: |
             cljdeps-${{ runner.os }}-
 
+      - name: Compile Java (jnr-ffi bindings)
+        run: |
+          clj -T:build jar || \
+          (mkdir -p target/classes && javac -cp "$(clojure -Spath)" -d target/classes $(find src-java -name "*.java"))
+
       - name: Run unit tests
         run: clojure -M:test
 
