ci: fix clojure setup, pin tools, and add lsp->cljfmt fallback

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ main, master ]
 
-# 同じブランチでの重複ジョブはキャンセル（高速化）
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -28,13 +27,15 @@ jobs:
           distribution: temurin
           java-version: '21'
 
+      # Clojure CLI + linters (clojure-lsp はここでは入れない)
       - name: Set up Clojure ecosystem
         uses: DeLaGuardo/setup-clojure@13.0
         with:
+          # Clojure CLI (tools.deps)
           cli: '1.11.3.1453'
-          clj-kondo: 'latest'
-          cljfmt: 'latest'
-          clojure-lsp: 'latest'
+          # pin to avoid 403 on "latest"
+          clj-kondo: '2024.05.24'
+          cljfmt: '0.13.0'
 
       - name: Cache Clojure deps
         uses: actions/cache@v4
@@ -48,12 +49,23 @@ jobs:
             cljdeps-${{ runner.os }}-
 
       - name: Compile Java (jnr-ffi bindings)
+        shell: bash
         run: |
-          clj -T:build jar || \
+          set -e
+          # Prefer tools.build; fallback to direct javac with deps classpath
+          clojure -T:build jar || \
           (mkdir -p target/classes && javac -cp "$(clojure -Spath)" -d target/classes $(find src-java -name "*.java"))
 
       - name: Run unit tests
-        run: clj -M:test
+        run: clojure -M:test
 
-      - name: Lint / Format (dry-run)
-        run: clojure-lsp format --dry
+      - name: Lint / Format (prefer clojure-lsp, fallback to cljfmt)
+        shell: bash
+        run: |
+          set -e
+          if command -v clojure-lsp >/dev/null 2>&1; then
+            clojure-lsp format --dry
+          else
+            echo "clojure-lsp not found; falling back to cljfmt check"
+            cljfmt check
+          fi
