ci: install official Clojure CLI; build with clojure; cljfmt via deps (no 403)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,15 +27,15 @@ jobs:
           distribution: temurin
           java-version: '21'
 
-      # Clojure CLI + linters (clojure-lsp はここでは入れない)
-      - name: Set up Clojure ecosystem
-        uses: DeLaGuardo/setup-clojure@13.0
-        with:
-          # Clojure CLI (tools.deps)
-          cli: '1.11.3.1453'
-          # pin to avoid 403 on "latest"
-          clj-kondo: '2024.05.24'
-          cljfmt: '0.13.0'
+      # --- Install Clojure CLI via official script (robust) ---
+      - name: Install Clojure CLI
+        shell: bash
+        run: |
+          set -e
+          curl -sSL -o clj.sh https://download.clojure.org/install/linux-install-1.11.1.1435.sh
+          chmod +x clj.sh
+          sudo ./clj.sh
+          clojure -Sdescribe
 
       - name: Cache Clojure deps
         uses: actions/cache@v4
@@ -59,13 +59,6 @@ jobs:
       - name: Run unit tests
         run: clojure -M:test
 
-      - name: Lint / Format (prefer clojure-lsp, fallback to cljfmt)
-        shell: bash
-        run: |
-          set -e
-          if command -v clojure-lsp >/dev/null 2>&1; then
-            clojure-lsp format --dry
-          else
-            echo "clojure-lsp not found; falling back to cljfmt check"
-            cljfmt check
-          fi
+      # --- Format check without external binaries (avoid 403) ---
+      - name: Lint / Format (cljfmt via deps)
+        run: clojure -Sdeps '{:deps {cljfmt/cljfmt {:mvn/version "0.13.0"}}}' -M -m cljfmt.main check
