--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,19 +55,10 @@ jobs:
           clj-kondo: 'latest'
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Add local bin to PATH
-        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Install clojure-lsp (manual)
-        shell: bash
-        run: |
-          set -e
-          ver=2025.11.28-12.47.43
-          url="https://github.com/clojure-lsp/clojure-lsp/releases/download/${ver}/clojure-lsp-native-static-linux-amd64.zip"
-          curl -sL "$url" -o /tmp/clojure-lsp.zip
-          unzip -q /tmp/clojure-lsp.zip -d /tmp/clojure-lsp
-          install -m 755 /tmp/clojure-lsp/clojure-lsp "$HOME/.local/bin/clojure-lsp"
-          clojure-lsp --version
+      - name: Install clojure-lsp (official action)
+        uses: clojure-lsp/setup-clojure-lsp@v1
+        with:
+          version: latest
 
       - name: Compile Java (jnr-ffi bindings)
         shell: bash
