ci: run junit via tools.build and refresh deps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
         run: |
           set -e
           clojure -T:build javac-test
-          clojure -M:junit
+          clojure -T:build junit
 
       - name: SpotBugs
         shell: bash
